# atcoder-cli

./: Cargo.toml
src/: main.rs
src/commands/: login.rs  mod.rs  new.rs  submit.rs  test.rs
