[package]
name = "atcoder-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
promptuity = "0.0.5"
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
scraper = "0.19.0"
tokio = { version = "1", features = ["full"] }
